styles.css
* {
    box-sizing: border-box;
}

.button {
    width: fit-content;
    padding: 2px;
}

.initialSettingsContainer {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

#menu {
    display: flex;
    gap: 10px;
    margin: 5px;
}

#grid {
    display: grid;
    border: solid black;
    max-height: 90vh;
    max-width: 90vh;
    aspect-ratio: 1 / 1;
    margin: 0 auto;
    background-color: #808080;
}

.space {
   aspect-ratio: 1 / 1;
}

.hidden {
    display: none;
}

